Added color, background and padding for all canvas elements